--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="card-body">
                     <h5 class="card-title"><a href="https://playvalorant.com/en-gb/" target="_blank">Valorant</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
-                    <p class="card-text">Valorant est un jeu vidéo free-to-play de tir à la première personne en multijoueur développé et édité par Riot Games et sorti le 2 juin 2020.</p>
+                    <p class="card-text">Valorant est un jeu vidéo free-to-play de tir à la première personne en multijoueur développé et édité par Riot Games et sorti le 2 juin 2020.Annoncé lors du 10ième anniversaire de League of legends en 2019. </p>
                     <footer class="blockquote-footer">Riot Games<cite title="Source Title"></cite></footer>
                 </div>
             </div>
